--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Nkeksi</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="map_key">AIzaSyAwzbI1yf4T8lxO3ZV7BmqDB5k8odsFWjM</string>
+    <string name="google_map_key">AIzaSyAwzbI1yf4T8lxO3ZV7BmqDB5k8odsFWjM</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
