--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="map_key">AIzaSyAwzbI1yf4T8lxO3ZV7BmqDB5k8odsFWjM</string>
     <string name="google_map_key">AIzaSyAwzbI1yf4T8lxO3ZV7BmqDB5k8odsFWjM</string>
     <string name="title_activity_maps">Map</string>
+    <string name="slogan_text">The Power Of Assisting for the Best Quality</string>
 </resources>
